apps/argocd/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-app-tailscale-ingress
  namespace: argocd
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - argocd-app-2
  rules:
  - host: "argocd-app-2"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
